--- a/app/views/moviees/_form.html.erb
+++ b/app/views/moviees/_form.html.erb
@@ -36,6 +36,12 @@
     <%= form.text_field :rating %>
   </div>
 
+   <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+
+
   <div class="actions">
     <%= form.submit %>
   </div>
