--- a/app/views/moviees/index.html.erb
+++ b/app/views/moviees/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>image</th>
       <th>Title</th>
       <th>Description</th>
       <th>Movie length</th>
@@ -17,6 +18,7 @@
   <tbody>
     <% @moviees.each do |moviee| %>
       <tr>
+        <td><%= link_to image_tag(moviee.image, style: 'width:20%;') %></td>
         <td><%= moviee.title %></td>
         <td><%= moviee.description %></td>
         <td><%= moviee.movie_length %></td>
