--- a/app/views/moviees/show.html.erb
+++ b/app/views/moviees/show.html.erb
@@ -4,6 +4,9 @@
   <strong>Title:</strong>
   <%= @moviee.title %>
 </p>
+<p>
+  <%= link_to image_tag(@moviee.image, style: 'width:50%'), moviee_path %>
+</p>
 
 <p>
   <strong>Description:</strong>
